# baseline-node

./: .gitignore  LICENSE.md  README.md  config.json  pyproject.toml  run_node.py
.github/workflows/: tests.yml
baseline/: __init__.py  config.py  logging.py  mempool.py  node.py  policy.py  time_sync.py  wallet.py
baseline/core/: __init__.py  address.py  block.py  chain.py  crypto.py  difficulty.py  fork.py  script.py  tx.py  upgrade.py
baseline/mining/: __init__.py  payout.py  stratum.py  templates.py
baseline/net/: __init__.py  address.py  (+7 more)
docs/: _read_first.md  configuration.md  exchange-integration.md  governance.md  mining-and-payouts.md  networking.md  operations.md  prerequisites.md  rpc.md  scheduled_transactions.md  spec.md
tests/: test_chain.py  test_future_block_uses_synced_time.py  test_fuzz_rpc_mempool.py  test_gui_actions.py  test_hashrate_calc.py  test_locking_concurrency.py  test_lwma_difficulty.py  test_mainnet_freeze.py  test_mempool.py  test_mining.py  test_network_mining.py  test_node_sets_global_time_manager.py  test_p2p_broadcast.py  test_p2p_request_block.py  test_protocol.py  test_protocol_fuzzish_decode.py  test_real_network.py  test_reorg_fork_choice.py  test_rpc.py  test_rpc_server.py  test_security_and_upgrades.py  test_smoke.py  test_storage.py  test_stratum_vardiff.py  test_stress.py  test_sync.py  test_time_sync.py  test_tps.py  test_wallet.py  test_wallet_missing_block.py
tools/: __init__.py  rpc_stress.py  simple_miner.py  tps_benchmark.py  wallet_cli.py
wallet/: __init__.py  cli.py  client.py  config.py  gui.py  helpers.py
(+20 files in other folders)
