[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-node"
version = "0.1.0"
description = "Baseline SHA256d full node with wallet, RPC, and Stratum mining"
readme = "README.md"
authors = [{name = "Baseline Contributors"}]
requires-python = ">=3.12"
license = {text = "Proprietary"}
dependencies = []

[project.scripts]
baseline-node = "run_node:main"
baseline-wallet = "tools.wallet_cli:main"
baseline-miner = "tools.simple_miner:main"

[tool.setuptools.packages.find]
include = ["baseline", "baseline.*", "tools", "tools.*"]

[tool.setuptools]
py-modules = ["run_node"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["baseline", "tests", "tools"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "S",  # flake8-bandit
    "PL", # pylint-inspired rules
]
ignore = [
    "S101",  # assert statements acceptable in tests/utilities
]
extend-ignore = [
    "E501",    # long lines are acceptable in serialized data/tests
    "S104",    # binding to 0.0.0.0 is intentional for servers
    "S105",    # demo credentials are placeholders
    "S112",
    "S608",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "B905",
    "UP012",
    "PLC0415",
]
